--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "start:js": "node dist/main.js",
     "start:ts": "ts-node src/main.ts",
+    "start:ts:dev": "ts-node src/Dev/main.ts",
     "build": "npm run build:clean && npm run build:ts",
     "build:ts": "tsc",
     "build:clean": "rimraf ./dist",
@@ -23,11 +24,17 @@
   "dependencies": {
     "@prisma/client": "^3.12.0",
     "axios": "^0.26.1",
+    "body-parser": "^1.20.1",
     "express": "^4.18.1",
+    "inversify": "^6.0.1",
+    "inversify-express-utils": "^6.4.3",
+    "io-ts": "^2.2.20",
+    "io-ts-types": "^0.5.19",
     "md5": "^2.3.0",
     "module-alias": "^2.2.2",
     "node-json-db": "^1.4.1",
     "redis": "^4.0.4",
+    "reflect-metadata": "^0.1.13",
     "request": "^2.88.2",
     "telegraf": "^4.8.5",
     "useragent": "^2.3.0",
