--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "^4.18.1",
     "inversify": "^6.0.1",
     "inversify-express-utils": "^6.4.3",
+    "inversify-binding-decorators": "^4.0.0",
     "io-ts": "^2.2.20",
     "io-ts-types": "^0.5.19",
     "md5": "^2.3.0",
@@ -39,7 +40,8 @@
     "telegraf": "^4.8.5",
     "useragent": "^2.3.0",
     "validator": "^13.7.0",
-    "yamlparser": "^0.0.2"
+    "yamlparser": "^0.0.2",
+    "nodemailer": "^6.9.0"
   },
   "devDependencies": {
     "@tsconfig/node16": "^1.0.2",
@@ -49,6 +51,7 @@
     "@types/module-alias": "^2.0.1",
     "@types/useragent": "^2.3.0",
     "@types/validator": "^13.7.0",
+    "@types/nodemailer": "^6.4.7",
     "ava": "^4.1.0",
     "prisma": "^3.12.0",
     "ts-node": "^10.7.0",
