--- a/package.json
+++ b/package.json
@@ -41,7 +41,11 @@
     "useragent": "^2.3.0",
     "validator": "^13.7.0",
     "yamlparser": "^0.0.2",
-    "nodemailer": "^6.9.0"
+    "nodemailer": "^6.9.0",
+    "password-hash": "^1.2.2",
+    "uuid": "^9.0.0",
+    "pug": "^3.0.2",
+    "handlebars": "^4.7.7"
   },
   "devDependencies": {
     "@tsconfig/node16": "^1.0.2",
@@ -52,13 +56,22 @@
     "@types/useragent": "^2.3.0",
     "@types/validator": "^13.7.0",
     "@types/nodemailer": "^6.4.7",
+    "@types/password-hash": "^1.2.21",
+    "@types/uuid": "^9.0.0",
+    "@types/pug": "^2.0.6",
     "ava": "^4.1.0",
     "prisma": "^3.12.0",
     "ts-node": "^10.7.0",
     "tsconfig-paths": "^4.1.0",
-    "typescript": "^4.5.3"
+    "typescript": "^4.5.3",
+    "prettier": "^2.8.4"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
+  },
+  "prettier": {
+    "tabWidth": 4,
+    "arrowParens": "avoid",
+    "bracketSameLine": true
   }
 }
